[tool.poetry]
name = "slingpy"
version = "0.1.0"
description = ""
authors = ["thrizzle"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
aiohttp = "^3.8.1"
cachetools = "^5.0.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
uvicorn = "^0.17.6"
fastapi-utils = "^0.2.1"
progress = "^1.6"
redis = "^4.2.2"
hiredis = "^2.0.0"
brotli-asgi = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
fastapi-profiler = "^1.0.0"
types-cachetools = "^5.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
